--- a/index.Rmd
+++ b/index.Rmd
@@ -9,8 +9,54 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r}
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+```
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+#Read in salmon count file
+
+```{r}
+esc <-  read.csv(url("https://knb.ecoinformatics.org/knb/d1/mn/v2/object/urn%3Auuid%3Af119a05b-bbe7-4aea-93c6-85434dcb1c5e", 
+                 method = "libcurl"),
+                 stringsAsFactors = FALSE)
+```
+
+#Calculate annual escapment for salmon species
+
+```{r}
+annual_esc <- esc %>% 
+  separate(sampleDate, c("Year", "Month", "Day"), sep = "-", remove = F) %>% 
+ mutate(Year = as.numeric(Year)) %>% 
+ group_by(Year, SASAP.Region, Species) %>% 
+ summarise(total_escapment = sum(DailyCount)) %>% 
+ filter(Species %in% c("Chinook", "Sockeye", "Chum", "Pink", "Coho")) 
+#the line of code above is the same as this line below:
+#filter(Species == "Chinook" | Species == "Sockeye" | Species == "Chum" etc.)
+head(annual_esc)
+```
+
+#Visualize Escapment
+```{r}
+ggplot(data = annual_esc, mapping = aes(x= Species, y = total_escapment,))+ geom_col( fill = "blue")
+```
+
+```{r}
+ggplot(data = annual_esc, mapping = aes(x= Species, y = total_escapment, fill = SASAP.Region))+ geom_col()
+```
+
+
+#Map sampling locations
+
+
+
+
+
+
+
+
+
+
+
